WIP: re-organize docker cloud topics, public intro to swarm mode
edited screen snap

breaking out topics for Docker Cloud swarm mode

added another where-to-next link

added more where-to-next links

added back in on-page TOC for create swarm topic

incorporated Ryan's review comments on first draft

more Ryan's review comments, sweep thru all for consistency, notoc on short pages, etc.

removed duplicate link to 'create a new swarm in docker cloud'

Laura's comments incorporated

re-organized Cloud topics, added in Swarm Mode

Ryan's review comments on Cloud, added new type of advisory for Beta previews

more review comments, manage infrastructure --> standard mode

fixing image

testing cloud images

updates to Cloud welcome page for Swarm, non-Swarm descriptions

add new cloud repository image

retake of corrupted image

fixed the other instance of corrupted image by referencing the retake

fixing corrupted image on GitHub

Signed-off-by: Victoria Bialas <victoria.bialas@docker.com>

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -218,6 +218,9 @@ ng\:form {
               <section class="section" id="DocumentationText">
 								{% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
 								{% if page.advisory %}<blockquote style="border-left: 6px solid #FFD601; background: -webkit-gradient(linear, left top, left bottom, from(#FBFCFC), to(#EBEDEF));">{{ site.data.advisories.texts[page.advisory] | markdownify }}</blockquote>{% endif %}
+
+								{% if page.previewflag %}<blockquote style="border-left: 6px solid #2ECC71; background: -webkit-gradient(linear, left top, left bottom, from(#FBFCFC), to(#EBEDEF));">{{ site.data.previewdocs.texts[page.previewflag] | markdownify }}</blockquote>{% endif %}
+
               {% unless page.tree == false %}{% include read_time.html %}{% endunless %}
 							{{ content }}
 							{% if page.noratings != true %}
