Layout updates, dark themes, tons o stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,18 @@
-<!-- NEED TO UPDATE FINAL SCRIPT FOR NEWSLETTER SIGNUP -->
-<section class="newsletter_section">
-    <div class="container">
-        <form class="form-inline">
-            <div class="form-group">
-                <input type="email" class="form-control input" id="#add-id-here" placeholder="email address">
-                <button type="submit" class="outline-btn">Submit</button>
-            </div>
-        </form>
-    </div>
-</section>
-
-<!-- global footer -->
+<!-- footer -->
 <footer class="footer">
+  <!-- newsletter -->
+  <div class="newsletter_section">
+      <div class="container">
+          <div class="col-md-8">
+              <form class="form-inline">
+                  <div class="form-group">
+                      <input type="email" class="form-control input" placeholder="email address">
+                      <button type="submit" class="button outline-btn newsletter">Submit</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
     <div class="container">
         <div class="top_footer">
             <div class="row">
@@ -30,18 +31,18 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-2">
-                    <ul class="footer_links links_2">
+                    <ul class="footer_links">
                         <li><a href="https://www.docker.com/products/overview">Product</a></li>
                         <li><a href="https://www.docker.com/pricing">Pricing</a></li>
                         <li><a href="https://www.docker.com/docker-community">Community Edition</a></li>
                         <li><a href="https://www.docker.com/enterprise">Enterprise Edition </a></li>
                         <li><a href="https://www.docker.com/products/docker-datacenter">Docker Datacenter</a></li>
-                        <li><a href="https://www.docker.com/products/docker-cloud">Docker Cloud</a></li>
-                        <li><a href="https://docs.docker.com/docker-store/">Docker Store</a></li>
+                        <li><a href="https://cloud.docker.com/">Docker Cloud</a></li>
+                        <li><a href="https://store.docker.com/">Docker Store</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3">
-                    <ul class="footer_links links_3">
+                    <ul class="footer_links">
                         <li><a href="https://www.docker.com/docker-mac">Docker for Mac </a></li>
                         <li><a href="https://www.docker.com/docker-windows">Docker for Windows(PC)</a></li>
                         <li><a href="https://www.docker.com/docker-aws" class="web30">Docker for AWS</a></li>
@@ -63,7 +64,7 @@
                         <li><a href="https://blog.docker.com" target="_blank">Blog</a></li>
                         <li><a href="https://training.docker.com/" target="_blank">Training</a></li>
                         <li><a href="https://www.docker.com/docker-support-services">Support</a></li>
-                        <li><a href="https://www.docker.com/docker">KB</a></li>
+                        <li><a href="https://success.docker.com/kbase">Knowledge Base</a></li>
                         <li><a href="https://www.docker.com/products/resources">Resources</a></li>
                     </ul>
                 </div>
@@ -75,7 +76,7 @@
                         <li><a href="https://forums.docker.com/" target="_blank">Forums</a></li>
                         <li><a href="https://www.docker.com/community/docker-captains">Docker Captians</a></li>
                         <li><a href="https://www.docker.com/docker-community/scholarships">Scholarships</a></li>
-                        <li><a href="https://www.docker.com/company/news-and-press">Community News</a></li>
+                        <li><a href="https://blog.docker.com/curated/">Community News</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,4 +111,4 @@
         </div>
     </div>
 </footer>
-<!-- / end footer -->
+<!-- /end footer -->
