--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,3 @@
-<!-- footer -->
-<footer class="footer">
   <!-- newsletter -->
   <div class="newsletter_section">
       <div class="container">
@@ -23,7 +21,7 @@
                         <li><a href="https://www.docker.com/use-cases">Use Cases</a></li>
                         <li><a href="https://www.docker.com/customers">Customers</a></li>
                         <li><a href="https://www.docker.com/partners/partner-program">Partners</a></li>
-                        <li><a href="https://www.docker.com/industry-government">For Government</a></li>
+                        <li class="break"><a href="https://www.docker.com/industry-government">For Government</a></li>
                         <li><a href="https://www.docker.com/company">About Docker</a></li>
                         <li><a href="https://www.docker.com/company/management">Management</a></li>
                         <li><a href="https://www.docker.com/company/news-and-press">Press &amp; News</a></li>
@@ -35,7 +33,7 @@
                         <li><a href="https://www.docker.com/products/overview">Product</a></li>
                         <li><a href="https://www.docker.com/pricing">Pricing</a></li>
                         <li><a href="https://www.docker.com/docker-community">Community Edition</a></li>
-                        <li><a href="https://www.docker.com/enterprise">Enterprise Edition </a></li>
+                        <li class="break"><a href="https://www.docker.com/enterprise">Enterprise Edition </a></li>
                         <li><a href="https://www.docker.com/products/docker-datacenter">Docker Datacenter</a></li>
                         <li><a href="https://cloud.docker.com/">Docker Cloud</a></li>
                         <li><a href="https://store.docker.com/">Docker Store</a></li>
@@ -44,13 +42,13 @@
                 <div class="col-xs-12 col-sm-3 col-md-3">
                     <ul class="footer_links">
                         <li><a href="https://www.docker.com/docker-mac">Docker for Mac </a></li>
-                        <li><a href="https://www.docker.com/docker-windows">Docker for Windows(PC)</a></li>
+                        <li class="break"><a href="https://www.docker.com/docker-windows">Docker for Windows(PC)</a></li>
                         <li><a href="https://www.docker.com/docker-aws" class="web30">Docker for AWS</a></li>
-                        <li><a href="https://www.docker.com/docker-microsoft-azure">Docker for Azure</a></li>
+                        <li class="break"><a href="https://www.docker.com/docker-microsoft-azure">Docker for Azure</a></li>
                         <li><a href="https://www.docker.com/docker-windows-server">Docker for Windows Server</a></li>
-                        <li><a href="https://www.docker.com/docker-centos">Docker for CentOS</a></li>
+                        <li><a href="https://www.docker.com/docker-centos">Docker for CentOS distribution</a></li>
                         <li><a href="https://www.docker.com/docker-debian">Docker for Debian</a></li>
-                        <li><a href="https://www.docker.com/docker-fedora">Docker for Fedora</a></li>
+                        <li><a href="https://www.docker.com/docker-fedora">Docker for Fedora&#x00AE</a></li>
                         <li><a href="https://www.docker.com/docker-oracle-linux">Docker for Oracle Enterprise Linux</a></li>
                         <li><a href="https://www.docker.com/docker-rhel">Docker for RHEL</a></li>
                         <li><a href="https://www.docker.com/docker-sles">Docker for SLES</a></li>
@@ -110,5 +108,3 @@
             </div>
         </div>
     </div>
-</footer>
-<!-- /end footer -->
