--- a/_includes/global-header.html
+++ b/_includes/global-header.html
@@ -81,7 +81,7 @@
                 </form>
             </div>
             <div id="tabs">
-                <ul class="tabs nav navbar-nav navbar-left">
+                <ul class="tabs nav navbar-nav navbar-collapse collapse navbar-left">
                   {% include treebuilder.html %}
                 </ul>
             </div>
