--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,8 @@
-<nav class="nav-secondary navbar navbar-default navbar-fixed-top">
+<nav class="nav-secondary navbar navbar-fixed-top">
     <div class="container-fluid">
+      <!-- <div class="ctrl-left">
+        <a href="javascript:void(0)" id="menu-toggle-left"><i class="fa fa-outdent" aria-hidden="true"></i></a>
+      </div> -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -9,7 +12,6 @@
             </button>
                   <a href="/"><img class="logo" src="/images/docker-docs-logo.svg" alt="Docker Docs" title="Docker Docs"></a>
         </div>
-
           <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
               <div class="search-form" id="search-div">
                   <form>
@@ -27,8 +29,7 @@
                   </ul>
               </div>
               <div class="ctrl-right">
-                  <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-outdent" aria-hidden="true"></i></a>
-                  <!-- varsion -->
+                  <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
                   <div class="btn-group">
                       <button type="button" class="btn btn-default dropdown-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Docker 1.13 <span class="caret"></span>
