--- a/css/style-alt.css
+++ b/css/style-alt.css
@@ -358,7 +358,7 @@ a.button.outline-btn {
 
 .button {
     margin: 10px 10px 0 0;
-    font-family: Geomanist;
+    font-family: Geomanist Book;
     padding: 12px 35px 10px;
     min-width: 200px;
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
